rust/cambium-core/tests/compile-fail/user_ordered_leaf_list_no_set.rs
//! This file must fail to compile: `UserOrderedLeafList` has no order-agnostic setter.

use cambium_core::{Context, UserOrderedLeafList};

fn misuse(_ctx: &Context, mut list: UserOrderedLeafList<'_, '_>) {
    // There is deliberately no `set` method on `UserOrderedLeafList`.
    list.set("x");
}

fn main() {}
